manifests/registry/local_testing/apicurio-registry-envoy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: apicurio-registry
  name: apicurio-registry-envoy-ingress
spec:
  rules:
  - host: apicurio-envoy.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: apicurio-envoy-mt
            port:
              number: 80
        path: /
        pathType: Prefix
