manifests/registry/local_testing/tenant-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: tenant-manager
  name: tenant-manager-ingress
spec:
  rules:
  - host: tenant-manager.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: tenant-manager
            port:
              number: 8585
        path: /
        pathType: Prefix
